k8s/service_a_deployment-withinit.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: servicea-1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: servicea
        tbn_cluster: servicea
        stage: prod
        version: v1
    spec:
     restartPolicy: "Always"
     containers:
      - name: servicea
        image: vifoggy/servicea:lastest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP

      - name: envoy
        image: vifoggy/envoy-simple:latest
        imagePullPolicy: Always
        securityContext:
          privileged: true
          runAsUser: 999
        ports:
          - containerPort: 15001
          - containerPort: 9999
