k8s/service_a_deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: servicea
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: servicea
        tbn_cluster: servicea
        stage: prod
        version: v1
    spec:
      restartPolicy: "Always"
      containers:
      - name: servicea
        image: vifoggy/servicea:lastest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP

      - name: envoy
        image: turbinelabs/envoy-simple:0.19.0
        imagePullPolicy: Always
        ports:
          - containerPort: 80
          - containerPort: 9999
