k8s/service_b_deployment-withinit.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: serviceb-1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: serviceb
        tbn_cluster: serviceb
        stage: prod
        version: v1
    spec:
     restartPolicy: "Always"
     containers:
      - name: serviceb
        image: vifoggy/serviceb:lastest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
          name: http
          protocol: TCP

      - name: envoy
        image: vifoggy/envoy-simple:lastest
        imagePullPolicy: Always
        securityContext:
          privileged: true
          runAsUser: 999
        ports:
          - containerPort: 15001
          - containerPort: 9999
