k8s/service_c_deployment-withinit.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: servicec-1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: servicec
        tbn_cluster: servicec
        stage: prod
        version: v1
    spec:
     restartPolicy: "Always"
     containers:
      - name: servicec
        image: vifoggy/servicec:lastest
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
          name: http
          protocol: TCP

      - name: envoy
        image: vifoggy/envoy-simple:lastest
        imagePullPolicy: Always
        securityContext:
          privileged: true
          runAsUser: 999
        ports:
          - containerPort: 15001
          - containerPort: 9999
