k8s/service_c_deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: servicec
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: servicec
        tbn_cluster: servicec
        stage: prod
        version: v1
    spec:
      restartPolicy: "Always"
      containers:
      - name: servicec
        image: vifoggy/servicec:lastest
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
          name: http
          protocol: TCP

      - name: envoy
        image: turbinelabs/envoy-simple:0.19.0
        imagePullPolicy: Always
        ports:
          - containerPort: 15001
          - containerPort: 9999
