k8s/service_b_svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: serviceb
spec:
  ports:
  - name: envoy-web
    port: 15001
    targetPort: 15001
  selector:
    app: serviceb
