k8s/service_c_svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: servicec
spec:
  ports:
  - name: envoy-web
    port: 15001
    targetPort: 15001
  selector:
    app: servicec
